# forum

./: Anchor.toml  copyForumType.js  copyIdl.js  copyTokenHelper.js  copyZineType.js  package-lock.json  package.json
app/: package.json
app/public/: index.html
app/src/: Global.css  ebconfig.js  idl.json  index.css  index.tsx  interfaces.ts  utils.ts
app/src/api/: ForumType.ts  ZineType.ts  addresses.ts  config.ts  membership.ts  posts.ts
app/src/components/: About.tsx  DevnetDisclaimer.tsx  Home.tsx  NetworkChange.tsx  New.tsx  PostDetails.tsx  (+1 more)
programs/forum/: Cargo.toml
programs/forum/src/: lib.rs
programs/forum/src/anchor_token_metadata/: mod.rs
programs/forum/src/artifact/: mod.rs
programs/forum/src/artifact_auction/: mod.rs
programs/forum/src/create_ix/: mod.rs
programs/forum/src/ix_helpers/: mod.rs  smack.rs  vote.rs
programs/forum/src/ixns/: assert_wrap_session.rs  claim_post_reward.rs  create_leaderboard.rs  initialize_forum.rs  mint_membership.rs  mod.rs  place_bid_for_artifact.rs  submit_vote.rs  wrap_session.rs
programs/forum/src/leaderboard/: mod.rs
programs/forum/src/membership/: mod.rs
programs/forum/src/structs/: artifact.rs  core.rs  mod.rs  post_rewards.rs
programs/forum/src/utils/: address_book.rs  anchor_token_metadata.rs  create_acct_from_pda.rs  mod.rs  verify.rs
programs/forum/src/verify/: mod.rs
programs/testartifact/: Cargo.toml
programs/testartifact/src/: lib.rs
programs/zine/: Cargo.toml
tests/: forum.ts  localZine.ts  zine.ts
tests/helpers/: execution.ts
tests/hide/: localZine.ts  zine.ts
(+27 files in other folders)
