[package]
name = "forum"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "forum"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.19.0"
anchor-spl = "0.19.0"
borsh = { version = "0.9.1", features = ["const-generics"] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }